# bq-spark

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  spark.conf
scripts/: data.sh
src/: bq_native.py  spark_bq.py  spark_gcs.py  spark_test.py
src/bq_spark/: bq_native.py  spark_bq.py  spark_gcs.py  spark_test.py
src/bq_spark/utils/: io.py  spark.py
src/utils/: __init__.py  io.py  spark.py
